--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         li { margin-bottom: 8px; }
         a { color: #3498db; text-decoration: none; }
         a:hover { text-decoration: underline; }
-        .warning-box { background-color: #fff3cd; border-left: 5px solid #ffca28; padding: 15px; margin: 20px 0; font-weight: bold; }
+        .age-notice { background-color: #e8f4fd; border-left: 5px solid #3498db; padding: 15px; margin: 20px 0; font-weight: bold; }
         .footer { margin-top: 30px; font-size: 0.9em; color: #7f8c8d; border-top: 1px solid #eee; padding-top: 20px; }
     </style>
 </head>
@@ -24,8 +24,8 @@
     <h1>Privacy Policy</h1>
     <p>This privacy policy applies to the <strong>NXG Edu Hub</strong> app (hereby referred to as "Application") for mobile devices that was created by <strong>Md Riaj</strong> (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".</p>
 
-    <div class="warning-box">
-        Age Restriction: This Application is intended for users who are 18 years of age or older (18+). By using this Application, you confirm that you meet this age requirement.
+    <div class="age-notice">
+        Age Requirement: This Application is intended for users who are 13 years of age or older (13+). By using this Application, you confirm that you are at least 13 years old.
     </div>
 
     <h2>Information Collection and Use</h2>
@@ -48,17 +48,17 @@
         <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Google Analytics for Firebase</a></li>
     </ul>
 
-    <h2>Age Policy (18+)</h2>
-    <p>The Service Provider does not knowingly collect personally identifiable information from children under 13. However, since this Application is specifically designed for <strong>users aged 18 and above</strong>, we encourage all users to provide accurate age information. If you are under 18, please stop using this application immediately.</p>
+    <h2>Children's Privacy (Under 13)</h2>
+    <p>The Application does not address anyone under the age of 13. The Service Provider does not knowingly collect personally identifiable information from children under 13 years of age. If it is discovered that a child under 13 has provided personal information, it will be deleted immediately from the servers. If you are a parent or guardian and are aware that your child has provided us with personal information, please contact: <a href="mailto:officialappsconnect@gmail.com">officialappsconnect@gmail.com</a>.</p>
 
     <h2>Data Retention Policy</h2>
-    <p>The Service Provider will retain User Provided data for as long as you use the Application. If you'd like them to delete User Provided Data, please contact: <a href="mailto:officialappsconnect@gmail.com">officialappsconnect@gmail.com</a>.</p>
+    <p>The Service Provider will retain User Provided data for as long as you use the Application. If you'd like them to delete User Provided Data that you have provided via the Application, please contact: <a href="mailto:officialappsconnect@gmail.com">officialappsconnect@gmail.com</a>.</p>
 
     <h2>Security</h2>
     <p>The Service Provider provides physical, electronic, and procedural safeguards to protect the information processed and maintained.</p>
 
     <h2>Changes</h2>
-    <p>This Privacy Policy may be updated from time to time. Continued use of the app is deemed approval of all changes.</p>
+    <p>This Privacy Policy may be updated from time to time. You are advised to consult this page regularly for any changes, as continued use is deemed approval of all changes.</p>
 
     <div class="footer">
         <p><strong>Effective Date:</strong> 2026-02-11</p>
